--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,8 +3,152 @@
 
 *{
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+}
+body, html {
+    -webkit-overflow-scrolling: touch;
 }
 body {
     background-color: color(greyscale, 100);
     font-family: $font-family-main;
+    text-rendering: geometricPrecision;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+.no-scroll {
+    overflow: hidden;
+}
+#page-layout {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* TRANSITION ANIMATIONS */
+// Fade
+.fade-enter-active,
+.fade-leave-active {
+    @include transition-default(.3s)
+}
+.fade-enter-from,
+.fade-leave-to {
+    opacity: 0;
+}
+// Fade-in
+.fade-in-enter-active,
+.fade-in-leave-active {
+    @include transition-default(.3s)
+}
+.fade-in-enter-from {
+    opacity: 0;
+}
+.fade-in-leave-to {
+    opacity: 0;
+    transition: none;
+}
+// Menu
+.menu-enter-active,
+.menu-leave-active {
+    transform: scale(1);
+    @include transition-default(.4s)
+}
+.menu-enter-from {
+    transform: scale(1.2);
+    opacity: 0;
+}
+.menu-leave-to {
+    transform: scale(1);
+    opacity: 0;
+}
+// Button go top
+.go-top-enter-active,
+.go-top-leave-active {
+    transform: scale(1) translatey(0);
+    @include transition-default(.4s)
+}
+.go-top-enter-from {
+    transform: scale(1) translatey(100%);
+    opacity: 0;
+}
+.go-top-leave-to {
+    transform: scale(1) translatey(-40%);
+    opacity: 0;
+}
+// Cards
+.cards-enter-active,
+.cards-leave-active {
+    transform: scale(1);
+    opacity: 1;
+    @include transition-default(.3s)
+}
+.cards-enter-from{
+    transition-delay: .4s;
+    transform: scale(1.05);
+    opacity: 0;
+}
+.cards-leave-to {
+    transform: scale(.95);
+    opacity: 0;
+    
+}
+
+/* COMPONENTS */
+
+// Menu
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100dvw;
+    height: 100dvh;
+    background-color: color(greyscale, 600);
+    overflow: hidden;
+    z-index: 10;
+
+    .items-container {
+        $gap: 12px;
+
+        width: 100%;
+        height: 100%;
+        padding:
+            $page-margin
+            $page-margin
+            calc(50px + $gap + ($page-margin * 2))
+            $page-margin;
+            
+        display: flex;
+        flex-direction: column;
+        gap: $gap;
+
+        overflow-y: auto;
+    }
+
+    .buttons-container {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        padding: 0 $page-margin $page-margin $page-margin;
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        z-index: 2;
+
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 140px;
+            background: linear-gradient(0, #000 40%, rgba(0, 0, 0, 0.00) 100%);
+            z-index: -1;
+            pointer-events: none;
+        }
+    }
 }
