--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -92,63 +92,111 @@ body {
 }
 .cards-leave-to {
     transform: scale(.95);
-    opacity: 0;
-    
+    opacity: 0;  
 }
 
 /* COMPONENTS */
 
+// Buttons
+.left-position {
+    position: fixed;
+    left: 16px;
+    bottom: 16px;
+}
+.right-position {
+    position: fixed;
+    right: 16px;
+    bottom: 16px;
+}
+
 // Menu
+
 .menu-container {
     position: fixed;
     top: 0;
     left: 0;
     width: 100dvw;
     height: 100dvh;
-    background-color: color(greyscale, 600);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
     z-index: 10;
 
-    .items-container {
-        $gap: 12px;
-
-        width: 100%;
-        height: 100%;
-        padding:
-            $page-margin
-            $page-margin
-            calc(50px + $gap + ($page-margin * 2))
-            $page-margin;
-            
-        display: flex;
-        flex-direction: column;
-        gap: $gap;
-
-        overflow-y: auto;
-    }
-
-    .buttons-container {
+    .menu-background {
         position: absolute;
-        bottom: 0;
+        top: 0;
         left: 0;
         width: 100%;
-        height: auto;
-        padding: 0 $page-margin $page-margin $page-margin;
-        display: flex;
-        flex-direction: row;
-        gap: 10px;
-        z-index: 2;
+        height: 100%;
+        background-color: rgba(0,0,0,.9);
+        backdrop-filter: blur(10px);
+    }
 
-        &::before {
-            content: '';
+    .menu-wrap {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-color: color(greyscale, 600);
+        overflow: hidden;
+
+        @media (min-width: $break-mobile) {
+            width: 600px;
+            height: calc(100% - ($page-margin * 2));
+            border-radius: calc($radii-m + $page-margin);
+            background-color: color(greyscale, 100);
+        }
+
+        .items-container {
+            $gap: 12px;
+
+            width: 100%;
+            height: 100%;
+            padding:
+                $page-margin
+                $page-margin
+                calc(50px + $gap + ($page-margin * 2))
+                $page-margin;
+                
+            display: flex;
+            flex-direction: column;
+            gap: $gap;
+
+            overflow-y: auto;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+        }
+
+        .buttons-container {
             position: absolute;
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 140px;
-            background: linear-gradient(0, #000 40%, rgba(0, 0, 0, 0.00) 100%);
-            z-index: -1;
-            pointer-events: none;
-        }
+            height: auto;
+            padding: 0 $page-margin $page-margin $page-margin;
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            z-index: 2;
+
+            &::before {
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 140px;
+                background: linear-gradient(0, #000 40%, rgba(0, 0, 0, 0.00) 100%);
+                z-index: -1;
+                pointer-events: none;
+
+                @media (min-width: $break-mobile) {
+                    background: linear-gradient(0, #fff 40%, rgba(255, 255, 255, 0) 100%);
+                }
+            }
+        }   
     }
 }
